<?xml version="1.0" encoding="utf-8"?>

<account-authenticator
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:accountType="@string/account_type"
/>
